# synaptic

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CTestTestfile.cmake  Makefile  README.md  build.ninja  cmake_install.cmake  engine  engine.cpp  engine.py  micro_grad.ipynb  mnist_test_using_engine.py  output graph  test.py
.github/workflows/: cmake-multi-platform.yml
include/: connections.hpp  device_enum.hpp  layers.hpp  loss_fn.hpp  op_enum.hpp  optimisers.hpp  relu.hpp  rng_for_tensor.hpp  synaptic.hpp  tensor.hpp
include/abstracts/: basic_op.hpp  module.hpp
include/connections/: relu.hpp  sigmoid.hpp  silu.hpp  softmax.hpp  tanh.hpp
include/layers/: linear.hpp
include/logging/: logging.hpp
include/loss_fn/: cross_entropy_loss.hpp  mse.hpp
include/operands/: tensor_add.hpp  tensor_div.hpp  tensor_exp.hpp  tensor_log.hpp  tensor_matmul.hpp  tensor_mul.hpp  tensor_pow.hpp  tensor_reshape.hpp  tensor_sub.hpp  tensor_transpose.hpp
include/optimisers/: gd.hpp
include/rng_for_tensor/: randn.hpp
src/: CMakeLists.txt  Makefile  cmake_install.cmake  engine  engine.cpp  relu.tpp  tensor.tpp
src/connections/: relu.tpp  sigmoid.tpp  silu.tpp  softmax.tpp  tanh.tpp
src/layers/: linear.tpp
src/logging/: logging.cpp  logging.hpp
src/loss_fn/: cross_entropy_loss.tpp  mse.tpp
src/operands/: tensor_add.tpp  tensor_div.tpp  tensor_exp.tpp  tensor_log.tpp  tensor_matmul.tpp  tensor_mul.tpp  tensor_pow.tpp  tensor_reshape.tpp  tensor_sub.tpp  tensor_transpose.tpp
src/optimisers/: gd.tpp
src/rng_for_tensor/: randn.tpp
test/: CMakeLists.txt
test/integration_tests/: normal_neural_network_test.cpp
test/unit_tests/: add_op_tests.cpp  cross_entropy_loss_tests.cpp  div_op_test.cpp  div_op_tests.cpp  exp_op_test.cpp  exp_op_tests.cpp  log_op_tests.cpp  matmul_op_tests.cpp  mse_loss_tests.cpp  mse_op_tests.cpp  mul_op_tests.cpp  pow_op_tests.cpp  relu_op_tests.cpp  reshape_op_tests.cpp  sigmoid_op_tests.cpp  silu_op_tests.cpp  softmax_op_tests.cpp  sub_op_tests.cpp  tanh_op_tests.cpp  test_runner.cpp  transpose_op_tests.cpp
